2007-06-04  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: While reviewing bug #440498, I updated the
	  docs that explain the new background property so it makes
	  more sense.

2007-06-04  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.19.2:
        * NEWS: Updated.
	* docs/C/gdm.xml: Rewrote the "gdmdynamic Command Line Options"
	  section to fix a problem with xml2po crashing while trying to
	  process the file.  This problem was caused because some of the 
	  <varlistentry> items did not have values for the <term> tag,
	  which seemed to make xml2po unhappy.  Rewording this section
	  avoids this problem.  Updated to the new release number.
	* gui/gdmflexiserver-xnest-desktop.in.in: Change Name and
	  Comment from "New Login in a Nested Window" to
	  "New Login in a Window" since the usability team determined
	  that most users don't understand what "nested" means.  The new
	  string is more easy to understand to most non-technical users.

2007-06-04  Brian Cameron  <brian.cameron@sun.com>

	* gui/Makefile.am, gui/greeter/Makefile.am: Add -lfontconfig to
	  programs that link against gui/libgdmcommon.a since it now
	  contains FontConfig code, due to fix for bug #426653.  On
	  Solaris it is necessary to not link libraries implicitely.

2007-06-04  Lukasz Zalewski <lukas@dcs.qmul.ac.uk>

	* gui/greeter/greeter_item.c: (greeter_item_is_visible):
	  Changed the way CustomCommandX are handled. Fixes bug #442355
	* gui/greeter/greeter_parser.c: (parse_stock): 
	  Code cleanup regarding CustomCommands.
	* gui/greeter/greeter.c:
	* gui/gdmlogin.c:
	* daemon/gdm.c:
	  More code cleanup regarding CustomCommands 
	
2007-06-04  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c: Set invisible character to '*' if the
	  configuration file doesn't specify to use invisible or
	  circles.  Fixes bug #439089.  Patch by Sebastien Bacher
	  <seb128@debian.org>.

2007-06-04  Brian Cameron  <brian.cameron@sun.com>
