@@ -1,3 +1,11 @@
+2007-06-05  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/display.[ch], daemon/gdm-xdmcp-manager.c, daemon/slave.c:
+	  Now GDM sets WINDOWPATH so that AT programs such as braille
+	  displays can work better with Xnest and sessions started via
+	  VT.  Fixes enhancement request #443557.  Patch by Samuel
+	  Thibault <samuel.thibault@ens-lyon.org>
+
 2007-06-04  Brian Cameron  <brian.cameron@sun.com>
 
 	* docs/C/gdm.xml: While reviewing bug #440498, I updated the
